@@ -1,0 +1,15 @@
+This contains ubuntu-riccardo plus desktop stuff like:
+
+- sublime
+- dropbox
+
+sudo add-apt-repository ppa:webupd8team/sublime-text-2
+sudo apt-get update
+sudo apt-get install sublime-text
+
+sudo add-apt-repository ppa:webupd8team/sublime-text-3
+sudo apt-get update
+sudo apt-get install sublime-text-installer
+
+https://secure.logmein.com/labs/logmein-hamachi_2.1.0.139-1_amd64.deb
+
